feat: POST, PATCH, DELETE 메소드 내부 본인 확인 로직 추가 (#147) (#156)
* feat: 권한 체크 로직 추가 (#147)

* chore: resolve conflict (#147)

* rename: 파일 구조 변경 (#147)